Fix to work with dark mode

--- a/crx/static/twitlist.css
+++ b/crx/static/twitlist.css
@@ -8,6 +8,10 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.twitlist-ui-container.twitlist-ui-container-dark {
+  color: #fff;
+}
+
 .twitlist-info-container {
   font-style: italic;
   white-space: nowrap;
